[gd_scene load_steps=4 format=3 uid="uid://bbno54bfdvx5w"]

[ext_resource type="Texture2D" uid="uid://brme63bv520cu" path="res://assets/sprites/intro/0.png" id="1_0ohha"]
[ext_resource type="Script" path="res://scripts/ui/intro.gd" id="1_1vnro"]
[ext_resource type="Theme" uid="uid://b1ag333h42f7p" path="res://resources/ui_theme.tres" id="1_hq3xi"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_hq3xi")
script = ExtResource("1_1vnro")

[node name="AutoProgressTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 320.0
offset_bottom = 194.0
color = Color(0, 0, 0, 1)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 240.0

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="IntroImage" type="TextureRect" parent="AspectRatioContainer/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("1_0ohha")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="StoryLabel" type="Label" parent="AspectRatioContainer/CenterContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
text = "DODGE THE ADVANCE OF THE EVIL SPACE ALIENS AND APPROACH THE MISTERY OF TRANOID."
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="timeout" from="AutoProgressTimer" to="." method="_on_auto_progress_timer_timeout"]
